--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "mends-eu-website",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -13,7 +13,6 @@
     "@astrojs/check": "^0.5.2",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.3.5",
-    "reveal.js": "^5.0.4",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
