--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.5.2",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
+    "@types/alpinejs": "^3.13.6",
+    "alpinejs": "^3.13.5",
     "astro": "^4.3.5",
     "astro-robots-txt": "^1.0.0",
     "typescript": "^5.3.3"
