--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@alpinejs/intersect": "^3.13.5",
     "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.5.2",
     "@astrojs/sitemap": "^3.0.5",
@@ -21,6 +22,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/alpinejs__intersect": "^3.13.3",
     "@vite-pwa/astro": "^0.2.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
