--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vite-pwa/astro": "^0.2.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "unplugin-fonts": "^1.1.1"
   }
 }
