--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,18 @@
 {
-  "extends": "astro/tsconfigs/strict"
+	"extends": "astro/tsconfigs/strict",
+	"compilerOptions": {
+		"types": ["unplugin-fonts/client"],
+		"jsx": "preserve",
+		// Enable top-level await, and other modern ESM features.
+		"target": "ESNext",
+		"module": "ESNext",
+		// Enable node-style module resolution, for things like npm package imports.
+		"moduleResolution": "node",
+		// Enable JSON imports.
+		"resolveJsonModule": true,
+		// Enable stricter transpilation for better output.
+		"isolatedModules": true,
+		// Astro will directly run your TypeScript code, no transpilation needed.
+		"noEmit": true
+	}
 }
