feat(seo): add 'astro-seo' package and update styling
This commit includes several changes:

1. Add the 'astro-seo' package to both `package.json` and `package-lock.json`, which enables better SEO management in Astro files.
2. Update several CSS classes in `Main.astro`, `HeroSection.astro`, and `Layout.astro` for layout adjustment and visual enhancements.
3. Reorder the appearance of `ViewTransitions` and `Unfont` components inside `Head.astro`.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "alpinejs": "^3.13.5",
     "astro": "^4.3.5",
     "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^0.8.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
