--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
 	"extends": "astro/tsconfigs/strict",
 	"compilerOptions": {
-		"types": ["unplugin-fonts/client"],
+		"types": [
+			"unplugin-fonts/client"
+		],
 		"jsx": "preserve",
 		// Enable top-level await, and other modern ESM features.
 		"target": "ESNext",
@@ -14,5 +16,5 @@
 		"isolatedModules": true,
 		// Astro will directly run your TypeScript code, no transpilation needed.
 		"noEmit": true
-	}
+	},
 }
